--- a/resources/elasticsearch/config/elasticsearch.yml
+++ b/resources/elasticsearch/config/elasticsearch.yml
@@ -102,5 +102,7 @@ discovery.zen.ping.multicast.enabled: false
 # action.destructive_requires_name: true
 
 http.cors.enabled: true
-http.cors.allow-origin: /https?:\/\/.*/
-
+#http.cors.allow-origin: /https?:\/\/.*/
+http.cors.allow-origin : "*"
+http.cors.allow-methods : OPTIONS, HEAD, GET, POST, PUT, DELETE
+http.cors.allow-headers : X-Requested-With,X-Auth-Token,Content-Type, Content-Length
