--- a/resources/logstash/log_list/test1.conf
+++ b/resources/logstash/log_list/test1.conf
@@ -1,7 +1,7 @@
 input {
   file {
   	  type => "json"
-      path => "/home/vagrant/data/*.log"
+      path => "/home/ubuntu/data/*.log"
       start_position => "beginning"
   }
 }
