--- a/resources/logstash/log_list/test1_aws.conf
+++ b/resources/logstash/log_list/test1_aws.conf
@@ -1,10 +1,11 @@
 input {
   file {
   	  type => "json"
-      path => "/home/ubuntu/SodaTransferELK/resources/data/*.log"
+      path => "/opt/tomcat/logs/stats-*.log"
       start_position => "beginning"
   }
 }
+
 filter{
 	json{
 	    source => "message"
@@ -13,12 +14,15 @@ filter{
 		code => "event['timestamp'] = Time.at(event['timestamp']).strftime('%Y-%m-%dT%H:%M:%S') + '.' + event['microsecs'].to_s[1,3] + 'Z'"
   	}
 }
+
 output {
-  elasticsearch { 
+	elasticsearch { 
 #    node_name => "logstash-soad-elk"
-    hosts => ["localhost:9200"]
-    index => "test1"
-  }
-  stdout { codec => rubydebug }
+    	hosts => ["13.124.60.16:9200"]
+	    index => "test1"
+  	}
+	stdout { 
+		codec => rubydebug 
+	}
 }
 
