--- a/resources/logstash/log_list/test1_aws.conf
+++ b/resources/logstash/log_list/test1_aws.conf
@@ -2,6 +2,7 @@ input {
   file {
   	  type => "json"
       path => "/opt/tomcat/logs/stats-*.log"
+	  sincedb_path => "/home/ubuntu/logstash.test1"
       start_position => "beginning"
   }
 }
