--- a/setup.conf
+++ b/setup.conf
@@ -1,5 +1,6 @@
 {
   'ip'=> {
-    'elk' => "192.168.82.170",
+    'chef.tz.com' => "192.168.82.170",
+    'client.tz.com' => "192.168.82.171",
   }
 }
